--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,13 +1,13 @@
 /*!
-Theme Name: Jouy Theme
-Theme URI: https://www.demo.munichparisstudio.com/jouy
+Theme Name: Cosmo Theme
+Theme URI: https://www.demo.munichparisstudio.com/cosmo
 Author: MunichParis Studio
 Author URI: https://munichparisstudio.com
-Description: Jouy is a minimal and lightweight WordPress Theme for bloggers
+Description: cosmo is a minimal and lightweight WordPress Theme for bloggers
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: jouy
+Text Domain: cosmo
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
