--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,6 +1,9 @@
 .site-header {
 	text-align: center;
   margin-top: 0;
+  width: auto;
+  flex: 1;
+  justify-content: flex-start;
 
 	.site-branding {
 		width: 100%;
@@ -9,8 +12,15 @@
 
 	.site-title {
 		font: $font__headline;
-		font-size: 2.05em;
+		font-size: 2.35em;
     margin-top: 0em;
+    margin-bottom: 0em;
+    text-transform: lowercase;
+    text-align: left;
+	}
+
+	.site-description {
+		display: none;
 	}
 }
 
