--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -15,6 +15,10 @@
 
 #primary {
 	width: 100%;
+}
+
+.site-content.has-sidebar #primary {
+	width: 100%;
 
 	@include breakpoint(tablet) {
 		width: 65%;
@@ -89,9 +93,11 @@
 }
 
 .entry-meta {
-	font: $font__menu-small;
+	font: $font__menu;
 	margin-bottom: 1.5em;
 	color: $color__primary;
+	text-transform: uppercase;
+	letter-spacing: 0.05em;
 
 	a {
 		color: $color__primary;
@@ -100,19 +106,32 @@
 			color: $color__accent;
 		}
 	}
+
+	.cat-links {
+		font-weight: 600;
+	}
 }
 
 .entry-title {
 	margin: 0.55em 0;
+	font-size: 2.25em;
+	text-transform: none;
 
 	a {
 		color: $color__primary;
 	}
 }
 
-.btn.read-more {
+.readmore {
 	display: block;
 	margin-top: 1.2em;
+	text-transform: uppercase;
+	font-style: italic;
+	color: $color__primary;
+}
+
+.readmore:hover {
+	color: $color__accent;
 }
 
 .entry-footer {
@@ -121,7 +140,6 @@
 	flex-wrap: wrap;
 	flex-direction: row-reverse;
 	margin-top: 2em;
-	border-bottom: 1px solid #dddddd;
 	padding-bottom: 1em;
 
 	.share, .comments-link {
@@ -145,6 +163,9 @@
 
 /* First Article */
 article.first-post {
+	border-bottom: 1px solid #dddddd;
+	padding-bottom: 2em;
+
 	.entry-title {
 		margin-top: 0;
 	}
@@ -158,11 +179,6 @@ article.first-post {
 		p {
 			width: 100%;
 			margin: 1em 0;
-
-			@include breakpoint(tablet) {
-				width: 78%;
-				margin-right: auto;
-			}
 		}
 
 		a {
@@ -171,14 +187,11 @@ article.first-post {
 			font-size: 1.2em;
 			text-align: center;
 
-			@include breakpoint(tablet) {
-				width: 17%;
-			}
-
 			button {
 				background: none;
 				color: $color__primary;
-				font-weight: bold;
+				font-weight: 400;
+				font-style: italic;
 				margin: 0;
 				padding: 0;
 				width: 100%;
@@ -195,8 +208,21 @@ article.first-post {
 
 
 .site-main {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: flex-start;
+
 	article {
 		margin-bottom: 3.5em;
+		width: 100%;
+		padding-bottom: 2em;
+
+		.entry-body {
+			max-width: 40em;
+			margin: 2em auto;
+			text-align: center;
+		}
 
 		/* Smaller Articles Homepage */
 		&.small {
@@ -204,13 +230,18 @@ article.first-post {
 			justify-content: space-between;
 			flex-wrap: wrap;
 			align-items: stretch;
+			width: 100%;
+
+			@include breakpoint(tablet) {
+				width: 48%;
+			}
 
 			.entry-body {
 				width: 100%;
 				border-bottom: 1px solid #dddddd;
 
 				@include breakpoint(tablet) {
-					width: 47%;
+					width: 100%;
 					padding: 1em;
 					display: flex;
 					flex-direction: column;
@@ -224,7 +255,6 @@ article.first-post {
 					button {
 						background: none;
 						color: $color__primary;
-						font-weight: bold;
 						padding: 0;
 						font-size: 0.975em;
 						margin: 0;
@@ -234,24 +264,18 @@ article.first-post {
 
 			.entry-thumbnail {
 				width: 100%;
-
-				@include breakpoint(tablet) {
-					height: 400px;
-					width: 50%;
-				}
-
-				img {
-					object-fit: cover;
-					width: 100%;
-					height: 400px;
-				}
 			}
 
 			.readmore {
-				display: flex;
-				justify-content: space-between;
-				align-items: center;
+				display: block;
 				margin-top: 2.5em;
+				font-style: italic;
+				text-align: center;
+
+				button {
+					font-weight: 400;
+					font-style: italic;
+				}
 
 				button:hover {
 					color: $color__accent;
@@ -272,7 +296,6 @@ article.first-post {
 	}
 
 	.entry-title {
-		text-transform: uppercase;
 		margin-bottom: 0.35em;
 	}
 }
@@ -302,23 +325,15 @@ article.first-post {
 /* Before & After Content Area Hoempage 
 ------------------------------------ */
 .after-content-home, .before-content-home {
-	max-width: $max_size__site-main;
-	margin: 2em auto;
-	padding: $padding__general;
 
 	.widgettitle {
 		text-align: center;
-		font-weight: 400;
-		text-transform: uppercase;
+		font-weight: 600;
+		font-size: 1.5em;
 		margin-top: 2em;
 
 		@include breakpoint(tablet) {
 			margin-top: 0em;
 		}
 	}
-}
-
-.before-content-home .widgettitle {
-	font-weight: 600;
-	font-size: 1.25em;
 }
