--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -11,26 +11,36 @@
 	@include breakpoint(tablet) {
 		padding: $padding__general;
 	}
+
+	.home & {
+		max-width: $max_size__site-main;
+	}
 }
 
 #primary {
 	width: 100%;
+	padding: 20px;
 }
 
-.site-content.has-sidebar #primary {
-	width: 100%;
+.site-content.has-sidebar {
+	max-width: 1280px;
 
-	@include breakpoint(tablet) {
-		width: 65%;
-		margin-right: auto;
+	#primary {
+		width: 100%;
+
+		@include breakpoint(tablet) {
+			width: 65%;
+			margin-right: auto;
+		}
+
 	}
 
 }
 
 #secondary {
 	width: 100%;
-	max-width: 25em;
 	margin: auto;
+	padding: 0px 20px;
 
 	@include breakpoint(tablet) {
 		width: 27%;
@@ -42,10 +52,19 @@
 		margin-top: 0;
 		margin-bottom: 0;
 		margin-right: 0;
+		padding-right: 20px;
 
 		&.sticky {
 			position: sticky;
 			top: 60px;
+		}
+	}
+
+	.widget {
+		margin: 2em auto;
+
+		&:first-of-type {
+			margin-top: 0;
 		}
 	}
 }
@@ -92,6 +111,17 @@
 	display: block;
 }
 
+.entry-thumbnail {
+	max-height: 550px;
+	overflow: hidden;
+
+	img {
+		object-fit: cover;
+		width: 100%;
+		height: 550px;
+	}
+}
+
 .entry-meta {
 	font: $font__menu;
 	margin-bottom: 1.5em;
@@ -114,8 +144,13 @@
 
 .entry-title {
 	margin: 0.55em 0;
-	font-size: 2.25em;
+	font-size: 1.75em;
+	line-height: 1.5em;
 	text-transform: none;
+
+	@include breakpoint(tablet) {
+		font-size: 2.25em;
+	}
 
 	a {
 		color: $color__primary;
@@ -152,8 +187,9 @@
 	}
 
 	.share {
-		width: 20%;
-		text-align: right;
+		width: 100%;
+		text-align: center;
+		font-size: 1.25em;
 		
 		a {
 			margin: 0 0.5em;
@@ -300,6 +336,20 @@ article.first-post {
 	}
 }
 
+.site-content.has-sidebar {
+	.entry-title {
+		font-size: 1.7em;
+	}
+
+	article:nth-of-type(n+2) .entry-body {
+		margin-top: 2em;
+
+		@include breakpoint(tablet) {
+			margin-top: 1em;
+		}
+	}
+}
+
 .nav-links {
 	font: $font__menu-small;
 	font-size: 1.2em;
@@ -321,10 +371,34 @@ article.first-post {
 	}
 }
 
+.numbered-navigation {
+	font: $font__menu;
+	font-weight: 600;
+	font-size: 1.5em;
+	text-align: center;
+	width: 100%;
+	margin-bottom: 2em;
+
+	ul {
+		list-style: none;
+		padding-left: 0;
+		text-align: center;
+
+		 li {
+		 	display: inline-block;
+		 	padding: 0 0.25em;
+		 }
+
+		 a {
+		 	color: $color__primary;
+		 }
+	}
+}
+
 
 /* Before & After Content Area Hoempage 
 ------------------------------------ */
-.after-content-home, .before-content-home {
+.after-content-home, .before-content-home, .single-post-widgets, .before-footer {
 
 	.widgettitle {
 		text-align: center;
