--- a/assets/sass/pages/post/_single.scss
+++ b/assets/sass/pages/post/_single.scss
@@ -2,18 +2,69 @@
 ----------------- */
 .site-content {
   margin-top: 3em;
+  max-width: 100%;
+  padding: 0;
+
+  &.has-sidebar {
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: $padding__general;
+  }
+
+  .site-max-width {
+    max-width: $max_size__site-main;
+    margin-left: auto;
+    margin-right: auto;
+    padding: $padding__general;
+  }
 }
 
 .site-main {
 	margin-bottom: 3.5em;
+
+  h1.site-max-width {
+    padding: 0.875em 0;
+
+    @include breakpoint(tablet) {   
+      padding: 0.1em $padding__general;
+    }
+  }
 }
 
 #secondary {
-  margin-top: 1em;
+  margin-top: 10px;
 }
 
-.entry-categories {
+.cat-links {
   text-align: center;
+  margin-right: 0.5em;
+}
+
+.posted-on {
+  margin-left: 0.5em;
+}
+
+.entry-header {
+  text-align: center;
+  margin-top: 2em;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0!important;
+
+  @include breakpoint(tablet) {
+    width: 70%;
+  }
+}
+
+.entry-excerpt {
+  font-style: italic;
+  margin: 2em auto;
+  width: 70%;
+  font-weight: 400;
+  font-size: 0.975em;
+  line-height: 1.55em;
 }
 
 .entry-content a {
@@ -26,20 +77,135 @@
   }
 }
 
+.entry-thumbnail {
+  max-height: 550px;
+  overflow: hidden;
+  padding: 0!important;
+
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 550px;
+  }
+}
+
 .entry-content {
   line-height: 1.6em;
   color: $color__primary;
+  font: $font__text-single;
 
   p {
-    font-size: 1.15em;
+    font-size: 1.1em;
+    line-height: 1.65em;
+    max-width: 780px;
+    margin: 2em auto;
+  }
+
+  h2, h3, h4, ul, ol {
+    max-width: 780px;
+    margin: 2em auto;
+  }
+
+  h2, h3, h4 {
+    margin-top: 1.5em;
+  }
+
+  h2 {
+    font-size: 1.875em;
+  }
+
+  h3 {
+    font-size: 1.5em;
+  }
+
+  h4 {
+    font-size: 1.25em;
+  }
+
+  img, figure {
+    max-width: $max_size__site-main;
+    margin: 2em auto;
+    padding: $padding__general;
+    width: 100%;
+  }
+
+  figure > img {
+    margin: 0 auto;
   }
 }
 
 .posts-navigation {
   margin-bottom: 4em;
+  max-width: $max_size__site-main;
+  margin-left: auto;
+  margin-right: auto;
+  padding: $padding__general;
+  width: 100%;
 
   p {
     margin-bottom: 0.5em;
     font: $font__menu-small;
   }
+}
+
+/* Gutenberg Styling
+---------------------- */
+.wp-block-columns {
+  align-items: center;
+  max-width: $max_size__site-main;
+  margin-left: auto;
+  margin-right: auto;
+  padding: $padding__general;
+
+  img {
+    max-width: $max_size__site-main;
+    margin: auto;
+    padding: 0;
+  }
+
+  .wp-block-column > figure {
+    margin: 0 auto;
+  }
+
+  .wp-block-column {
+    padding: 0 1.25em;
+  }
+
+  .wp-block-column:first-of-type {
+    padding-left: 0;
+  }
+
+  .wp-block-column:last-of-type {
+    padding-right: 0;
+  }
+    
+}
+
+.wp-block-cover-image {
+  min-height: 550px;
+  margin: 3em auto;
+
+  &.has-background-dim::before {
+    opacity: 0;
+    transition: 0.5s all ease-in-out;
+  }
+
+  &.has-background-dim:hover::before {
+    opacity: 1;
+  }
+
+  .wp-block-cover-image-text {
+    opacity: 0;
+    transition: 0.5s all ease-in-out;
+  }
+
+  &.has-background-dim:hover .wp-block-cover-image-text {
+    opacity: 1;
+  }
+}
+
+
+.single-post-widgets {
+  border-top: 1px solid $color__accent;
+  width: 100%;
 }
